# lxhotkey

./: .gitignore  CONCEPT  ChangeLog  Makefile.am  autogen.sh  configure.ac  lxhotkey.pc.in  lxkeys.pc.in
debian/: changelog  control  copyright  lxhotkey-dev.install  lxhotkey-gtk.install  lxhotkey-plugin-openbox.install  rules
man/: lxhotkey.1.in
plugins/: Makefile.am  gtk.c  lxhotkey-gtk.desktop.in  openbox.c
plugins/gtk/: edit.c  edit.h  gtk.c  lxhotkey-gtk.desktop.in
plugins/openbox/: openbox.c
po/: POTFILES.in  ca.po  cs.po  de.po  fr.po  gl.po  ka.po  lxhotkey.pot  lxkeys.pot  nl.po  pt.po  ru.po  sr.po  sr@latin.po  uk.po
src/: Makefile.am  lxhotkey.c  lxhotkey.h  lxkeys.c  lxkeys.h
